src/test/resources/de/cd4analysis/cocos/ebnf/invalid/cD4AC0001.cd
package de.cd4analysis.cocos;

classdiagram aCD4AC0001 {

}